<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".InsertInformation" >
    
    <EditText
        android:id="@+id/comp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company"
         />
    <EditText
        android:id="@+id/mon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/month"
         />
    <EditText
        android:id="@+id/cash"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/money"
         />
    <EditText
        android:id="@+id/reward"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bonus"
         />
    <EditText
        android:id="@+id/lim"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/limit"
         />
    <EditText
        android:id="@+id/tim"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time"
         />
    <EditText
        android:id="@+id/fees"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fee" 
        />
    
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/Submit" 
        android:onClick="submitItem" 
        />
</LinearLayout>