<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:alpha="1"
        android:maxLines="1"
        android:text="@string/title"
        android:textIsSelectable="false"
        android:textSize="35sp" />

    <Button
        android:id="@+id/scanButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="175dp"
        android:onClick="onScanPress"
        android:text="@string/scanButton" />

    <Button
        android:id="@+id/myCardsButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/myCards" />

    <ListView
        android:id="@+id/listViewMain"
        android:layout_width="match_parent"
        android:layout_height="91dp" >
    </ListView>

</LinearLayout>